@@ -1,5 +1,11 @@
 2001-02-26  Akim Demaille  <akim@epita.fr>
 
+	* automake.in: Use File::Basename.
+	(&dirname, &basename): Remove.
+
+	
+2001-02-26  Akim Demaille  <akim@epita.fr>
+
 	* automake.in ($me): New.
 	Use it.
 	(&usage): Display your full name.
